# rna-seq-platform

./: .gitignore  .vercelignore  CONTEXT.md  DEPLOYMENT.md  Makefile  PROGRESS.md  README.md  Snakefile  VERCEL_TROUBLESHOOTING.md  start_services.bat  start_services.ps1  update_progress.py  vercel.json
api/: Dockerfile  pyproject.toml  render.yaml  requirements.txt  test_platform.db
api/app/: data_init.py  live_discovery.py  main.py  multi_omics_api.py  multi_omics_discovery.py  schemas.py  utils.py
api/data/: platform.db
api/data_types/: framework.py
api/database/: manager.py  schema.sql
config/: design.tsv  project.yaml  stream.yaml
data/metadata/: PRJNA397172.tsv  registry.parquet  samples.csv
envs/: fastqc.yaml  net.yaml  py.yaml  r.yaml  salmon.yaml
results/de/: deseq_results.json  heatmap.json  pca.json
results/qc/: multiqc_data.json
scripts/: run_continuous_pipeline.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web-new/: package-lock.json  package.json  vercel.json  vite.config.ts
web-new/src/: App.tsx
web-new/src/components/: AnalysisLayout.tsx  DEGTable.tsx  DataModeSelector.tsx  DataStatusIndicator.tsx  GSEATable.tsx  Heatmap.tsx  LiveDiscoveryStatus.tsx  MAPlot.tsx  MultiOmicsDiscoveryStatus.tsx  MultiOmicsSelector.tsx  Navbar.tsx  PCAPlot.tsx  StatCard.tsx  VolcanoPlot.tsx  apiClient.ts
web-new/src/pages/: Differential.tsx  Explorer.tsx  Expression.tsx  GSEA.tsx  Overview.tsx  Pathways.tsx  QC.tsx
web/src/: main.tsx
workflows/: continuous_discovery.py  deseq2.R  discover_runs.py  report.Rmd
(+10 files in other folders)
